--- a/cmd/网络连接设置.md
+++ b/cmd/网络连接设置.md
@@ -42,6 +42,7 @@ BOOTPROTO="static" # dhcp改为static
 IPADDR="10.5.1.110"
 NETMASK="255.255.255.0"
 GATEWAY="10.5.1.1"
+DNS1="10.5.1.1"
 ```
 
 重启网络`systemctl restart network`生效
