--- a/学习笔记/语言/go/3.数据类型.md
+++ b/学习笔记/语言/go/3.数据类型.md
@@ -4,6 +4,8 @@
 
 数据类型的出现时为了把数据分成所需内存大小不同的数据，编程的时候需要用大数据的时候才需要申请大内存，就可以充分利用内容。
 
+
+
 ## 分类
 
 ### 布尔型
@@ -34,6 +36,8 @@ Go语言的字符串的字节使用UTF-8编码标识Unicode文本。
 - 切片类型
 - 接口类型
 - Map类型
+
+
 
 
 
@@ -71,6 +75,8 @@ Go语言的字符串的字节使用UTF-8编码标识Unicode文本。
 
 
 
+
+
 ### 浮点型
 
 - float32
@@ -89,12 +95,24 @@ Go语言的字符串的字节使用UTF-8编码标识Unicode文本。
 
   64位实数和虚数
 
+  ​
+
 
 
 ### 其他数字类型
 
-- byte 类似uint8
-- rune 类似int32
+- byte : uint8的别名
+- rune : int32的别名
 - uint 32或64位
 - int 与uint一样大小
 - uintptr 无符号整型，用于存放一个指针
+
+
+
+## 零值
+
+变量在定义时没有明确的初始化时会赋值为*零值*。零值是：
+
+- 数值类型是`0`
+- 布尔类型为`false`
+- 字符串为`""`(空字符串)
