--- a/学习笔记/语言/go/4.0变量.md
+++ b/学习笔记/语言/go/4.0变量.md
@@ -40,6 +40,23 @@ c := 10
 
 
 
+var语句可以定在包或函数列表。
+
+```go
+package main
+
+import "fmt"
+
+var c, python, java bool
+
+func main() {
+    var i int
+  	fmt.Println(i, c, python, java)
+}
+```
+
+
+
 ## 多变量声明
 
 ```go
@@ -61,6 +78,8 @@ var (
 在变量的初始化时省略变量的类型而由系统自动推断，声明语句协商`var`关键字其实是显得有些多余了，因此我们可以将它们简写为`a := 50`或者`b := false`，a和b的类型（int和bool）将由编译器自动推断。
 
 **这是使用变量的首选形式，但是它只能被用在函数体内，而不可以用于全局变量的生命和赋值**。使用操作符`:=`可以高效地创建一个新的变量，称之为**初始化声明**。
+
+函数外的每个语句都必须以关键字开始（var、func、等等），`:=`结构不能使用在函数外。
 
 
 
