--- a/学习笔记/语言/go/5.0常量.md
+++ b/学习笔记/语言/go/5.0常量.md
@@ -12,7 +12,10 @@ const identifier [type] = value
 
 - 显式类型定义。`const b string = "abc"`
 - 隐式类型定义。`const b = "abc"`
+- 常量不能使用`:=`语法定义。常量可以是字符、字符串、布尔或者数字类型的值。
 - 常量可以用`len()、cap()、unsafe.Sizeof()`常量计算表达式的值。常量表达式中，函数必须是内置函数，否则编译不过。
+
+
 
 
 
