--- a/学习笔记/语言/go/7.0条件语句.md
+++ b/学习笔记/语言/go/7.0条件语句.md
@@ -16,6 +16,18 @@ if false {
 
 
 
+if语句可以在条件之前执行一个简单语句。由这个语句定义的变量的作用域仅在if范围之内。
+
+```go
+if expression; condition {
+    
+}
+```
+
+
+
+
+
 ## switch语句
 
 ```go
@@ -30,7 +42,38 @@ switch var1 {
 ```
 
 - var1可以是任何类型。而val1和val2则可以是同类型的任意值。类型不被局限于常量或者整数，但必须是相同的类型；或者最终结果为相同类型的表达式。
+
 - 多个可能符合条件的值，使用都好分割它们，例如：`case val1, val2, val3`
+
+- case的值可以是一个表达式。`case a+b`
+
+- 没有条件的switch同`switch true`一样。这一构造使得可以用更清晰的形式来编写长的`if-then-else`
+
+  ```go
+  package main
+
+  import (
+    "fmt"
+    "time"
+  )
+
+  func main() {
+    t := time.Now()
+    switch {
+      case t.Hour() < 12:
+      	fmt.Println("Good morning!")
+      case t.Hour() < 17:
+      	fmt.Println("Good afternoon.")
+      defualt:
+      	fmt.Println("Good evening.")
+    }
+  }
+
+  ```
+
+  ​
+
+
 
 
 
@@ -46,6 +89,18 @@ switch x.(type) {
   	statement(s)
 }
 ```
+
+
+
+switch同样可以在条件之前执行一个简单语句。
+
+```go
+switch expression; condition {
+    
+}
+```
+
+
 
 
 
@@ -78,5 +133,5 @@ select {
 
   否则：
 
-   	1. 如果有default子句，则执行该语句。
-   	2. 如果没有default子句，select将阻塞，直到某个通信可以运行；Go不会重新对channel或值进行求值。
+     	1. 如果有default子句，则执行该语句。
+       2. 如果没有default子句，select将阻塞，直到某个通信可以运行；Go不会重新对channel或值进行求值。
