--- a/学习笔记/语言/go/8.0循环语句.md
+++ b/学习笔记/语言/go/8.0循环语句.md
@@ -1,5 +1,9 @@
 # 循环语句
 
+Go只有一种循环结构 - for循环
+
+
+
 ## for循环
 
 Go语言的For循环有3种形式，只有其中一种使用分号
@@ -12,9 +16,8 @@ for init; condition; post {}
 // 和while语言一样
 for condition {}
 
-// 和C的for(;;)一样
+// 死循环，和C的for(;;)一样
 for {}
-
 ```
 
 - init: 一般为赋值表达式，给控制变量赋初始值；
