--- a/学习笔记/语言/go/9.0函数.md
+++ b/学习笔记/语言/go/9.0函数.md
@@ -29,6 +29,32 @@ func function_name( [parameter list] ) [return_types] {
 
 
 
+
+## 返回参数
+
+- 可以返回多个参数。`return x, y`
+
+- Go的返回值可以被命名，并且就像在函数体开头声明的变量那样使用。返回值的名称应当具有一定的意义，可以作为文档使用。没有参数的return语句返回各个返回变量的当前值。这种用法被称作“裸”返回（直接返回）。直接返回语句仅应当用在像下面这样的短函数中。在长的函数中它们会影响代码的可读性。
+
+  ```go
+  package main
+
+  import "fmt"
+
+  func split(sum int) (x, y int) {
+      x = sum * 4 / 9
+    	y = sum - x
+    	return
+  }
+
+  func main() {
+    fmt.Println(split(17)) // 7 10
+  }
+  ```
+
+  ​
+
+
 ## 函数用法
 
 #### 函数定义后可作为值来使用
@@ -54,3 +80,54 @@ func (variable_name variable_data_type) function_name() [return_type]{
 ```
 
 > 注意variable_data_type为非指针和指针类型，在函数方法体内的不同
+
+
+
+## defer语句
+
+defer语句会延迟函数的执行直到上层函数返回。延迟调用的参数会立刻生成，但是在上层函数返回前函数都不会被调用。defer语句后的表达式必须是函数调用，如果要做操作声明一个匿名函数。
+
+延迟的函数调用被压入一个栈中。当函数返回时，会按照后进先出的顺序调用被延迟的函数调用。
+
+
+
+```go
+package main
+
+import "fmt"
+
+func main() {
+  	defer fmt.Println("world")
+  	fmt.Println("hello")
+}
+```
+
+```go
+package main
+
+import "fmt"
+
+func main() {
+  i := 0
+  
+  defer func(){
+    i ++
+    fmt.Println(i)
+  }()
+  
+  defer func(){
+    i ++
+    fmt.Println(i)
+  }()
+  
+  fmt.Println(i)
+}
+
+```
+
+```go
+1
+2
+3
+```
+
