--- a/学习笔记/语言/go/17.0接口.md
+++ b/学习笔记/语言/go/17.0接口.md
@@ -11,3 +11,20 @@ type interface_name interface {
 }
 ```
 
+接口是被隐式实现的。没有显式声明的必要，所以也就没有关键字“implements”。隐式接口解耦了实现接口的包和定义接口的包：互不依赖。因此，也就无需在每一个实现上增加新的接口名称，这样同时也鼓励了明确的接口定义。
+
+
+
+## 常用
+
+- Stringer接口。
+
+  ```go
+  type Stringer interface {
+    String() string
+  }
+  ```
+
+  `Stringer`是一个可以用字符串描述自己的类型。fmt包和其他包使用这个进行输出.
+
+- ​
