--- a/学习笔记/语言/go/14.0切片.md
+++ b/学习笔记/语言/go/14.0切片.md
@@ -16,5 +16,53 @@ make([]type, length, capacity)
 
 
 
+- slice有函数make创建。这会分配一个全是零值的数组并且返回一个slice指向这个数组。
 - 切片是可索引的，并且可以由len()方法获取长度，cap()可以测量侧偏最长可以达到多少。
 - 一个切片在未初始化之前默认为nil，长度为0.
+
+
+
+## slice的slice
+
+slice可以包含任意的类型，包括另一个slice。
+
+```go
+package main
+
+import (
+  "fmt"
+  "strings"
+)
+
+func main() {
+  // Create a tic-tac-toe board
+  game := [][]string {
+    []string{"_", "_", "_"},
+    []string{"_", "_", "_"},
+    []string{"_", "_", "_"}
+  }
+  
+  // The players take turns
+  game[0][0] = "X"
+  game[2][2] = "O"
+  game[2][0] = "X"
+  game[1][0] = "O"
+  game[0][2] = "X"
+  
+  printBoard(game)
+}
+
+func printBoard(s [][]string) {
+  for i := 0; i < len(s); i ++ {
+    fmt.Printf("%s\n", strings.Join(s[i], " "))
+  }
+}
+
+```
+
+
+
+## slice操作
+
+- 向slice的末尾添加元素:append。
+- for循环的`range`格式可以对slice或者map进行迭代循环。
