--- a/学习笔记/语言/go/9.0函数.md
+++ b/学习笔记/语言/go/9.0函数.md
@@ -59,13 +59,80 @@ func function_name( [parameter list] ) [return_types] {
 
 #### 函数定义后可作为值来使用
 
-可被赋值给变量
+可被赋值给变量。他们可以像其他值一样传递，比如，函数值可以作为函数的参数或者返回值。
+
+```go
+package main
+
+import (
+	"fmt"
+	"math"
+)
+
+func compute(fn func(float64, float64) float64) float64 {
+	return fn(3, 4)
+}
+
+func main() {
+	hypot := func(x, y float64) float64 {
+		return math.Sqrt(x*x + y*y)
+	}
+
+	fmt.Println(hypot(5, 12))
+	fmt.Println(compute(hypot))
+	fmt.Println(compute(math.Pow))
+
+}
+
+```
 
 
 
 #### 闭包
 
 Go语言支持匿名函数，可作为闭包。匿名函数是一个“内联”语句或表达式。匿名函数的优越性在于可以直接使用函数内的变量，不必申明。
+
+闭包是一个函数值，它引用了函数体之外的变量。这个函数可以对这个引用的变量进行访问和赋值。换句话说这个函数被“绑定”在这个变量上。
+
+
+
+Fibonacci数列，从a1=a2=1, an=a(n-1) + a(n-2) (n大于等于3)
+
+```go
+package main
+
+import "fmt"
+
+func fibonacci() func() int {
+	idx := 0
+	var vals []int
+	var val int
+
+	fn := func() int {
+		val = 0
+		if idx < 2 {
+			val = 1
+		} else {
+			pre2 := vals[idx-2]
+			pre1 := vals[idx-1]
+			val = pre2 + pre1
+		}
+
+		vals = append(vals, val)
+		idx++
+		return val
+	}
+
+	return fn
+}
+
+func main() {
+	f := fibonacci()
+	for i := 0; i < 10; i++ {
+		fmt.Println(i, f())
+	}
+}
+```
 
 
 
