--- a/学习笔记/语言/go/语法/4.0变量.md
+++ b/学习笔记/语言/go/语法/4.0变量.md
@@ -91,3 +91,37 @@ var (
 - 空白标识符`_`也被用于抛弃值，例如值5在`_, b = 5, 7`中被抛弃。`_`实际上是一个只写变量，你不能得到它的值。这样做事因为Go语言中你必须使用所有被声明的变量，但你有时不需要使用从一个函数得到的所有返回值。
 - 并行赋值也被用于当一个函数返回多个返回值时，比如这里的val和错误err是通过调用Func2函数同时得到：`val, err = Func1(var1)`
 
+
+
+
+
+
+### 重新声明与再次赋值
+
+满足下列条件时，已被声明的变量v可出现在`:=`声明中：
+
+- 本次声明与已声明的v处于同一作用域中（若v已在外层作用域中声明过，则此次声明会创建一个新的变量）。
+- 在初始化中与其类型相应的值才能赋予v，且在此次生命中至少另一个变量是新声明的。
+
+```go
+package main
+
+import "fmt"
+
+func echo() (int, int) {
+	return 2, 3
+}
+
+func main() {
+	v := 1
+	a, v := echo()
+	fmt.Println(v)
+	fmt.Println(a)
+}
+```
+
+```go
+3
+2
+```
+
