--- a/学习笔记/语言/go/语法/9.0函数.md
+++ b/学习笔记/语言/go/语法/9.0函数.md
@@ -34,7 +34,7 @@ func function_name( [parameter list] ) [return_types] {
 
 - 可以返回多个参数。`return x, y`
 
-- Go的返回值可以被命名，并且就像在函数体开头声明的变量那样使用。返回值的名称应当具有一定的意义，可以作为文档使用。没有参数的return语句返回各个返回变量的当前值。这种用法被称作“裸”返回（直接返回）。直接返回语句仅应当用在像下面这样的短函数中。在长的函数中它们会影响代码的可读性。
+- Go的返回值可以被命名，并且就像在函数体开头声明的变量那样使用。返回值的名称应当具有一定的意义，可以作为文档使用。没有参数的return语句返回各个形参的当前值。这种用法被称作“裸”返回（直接返回）。直接返回语句仅应当用在像下面这样的短函数中。在长的函数中它们会影响代码的可读性。
 
   ```go
   package main
@@ -189,7 +189,6 @@ func main() {
   
   fmt.Println(i)
 }
-
 ```
 
 ```go
