--- a/学习笔记/语言/go/语法/17.0接口.md
+++ b/学习笔记/语言/go/语法/17.0接口.md
@@ -27,4 +27,22 @@ type interface_name interface {
 
   `Stringer`是一个可以用字符串描述自己的类型。fmt包和其他包使用这个进行输出.
 
-- ​
+
+
+
+## 类型断言
+
+接口类型项普通类型是类型断言（运行期确定）
+
+```go
+var ia IA
+var ta = ia.(TA)
+var ib IB
+var tb = ib.(TB)
+
+switch err.(type){
+  case TA:
+  ...
+}
+```
+
