--- a/学习笔记/语言/go/语法/9.0函数.md
+++ b/学习笔记/语言/go/语法/9.0函数.md
@@ -175,25 +175,30 @@ package main
 import "fmt"
 
 func main() {
-  i := 0
-  
-  defer func(){
-    i ++
-    fmt.Println(i)
-  }()
-  
-  defer func(){
-    i ++
-    fmt.Println(i)
-  }()
-  
-  fmt.Println(i)
+	i := 0
+
+	defer func() {
+		i ++
+		fmt.Println(i)
+	}()
+
+
+	fmt.Println(i)
+
+
+	defer func(i int) {
+		i ++
+		fmt.Println(i)
+	}(i)
+
+	fmt.Println(i)
 }
 ```
 
 ```go
+0
+0
 1
-2
-3
+1
 ```
 
